// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List with basic theme applied List renders correctly 1`] = `
<View
  avatarContainerStyle={undefined}
  avatarOverlayContainerStyle={undefined}
  avatarStyle={undefined}
  disabledStyle={undefined}
  rightTitleContainerStyle={undefined}
  rightTitleStyle={undefined}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#bbb",
        "borderTopWidth": 1,
        "marginTop": 20,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
  subtitleContainerStyle={undefined}
  subtitleStyle={undefined}
  textInputContainerStyle={undefined}
  textInputStyle={undefined}
  titleContainerStyle={undefined}
  titleStyle={undefined}
  wrapperStyle={undefined}
/>
`;

exports[`List with basic theme applied OldList renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#bbb",
        "borderTopWidth": 1,
        "marginTop": 20,
      },
      undefined,
    ]
  }
/>
`;

exports[`List with no theme applied List renders correctly 1`] = `
<View
  avatarContainerStyle={undefined}
  avatarOverlayContainerStyle={undefined}
  avatarStyle={undefined}
  disabledStyle={undefined}
  rightTitleContainerStyle={undefined}
  rightTitleStyle={undefined}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#bbb",
        "borderTopWidth": 1,
        "marginTop": 20,
      },
      undefined,
    ]
  }
  subtitleContainerStyle={undefined}
  subtitleStyle={undefined}
  textInputContainerStyle={undefined}
  textInputStyle={undefined}
  titleContainerStyle={undefined}
  titleStyle={undefined}
  wrapperStyle={undefined}
/>
`;

exports[`List with no theme applied OldList and List returns the same thing if no theme is applied 1`] = `
"[32m- Expected[39m
[31m+ Received[39m

[2m  <View[22m
[32m-   avatarContainerStyle={undefined}[39m
[32m-   avatarOverlayContainerStyle={undefined}[39m
[32m-   avatarStyle={undefined}[39m
[32m-   disabledStyle={undefined}[39m
[32m-   rightTitleContainerStyle={undefined}[39m
[32m-   rightTitleStyle={undefined}[39m
[2m    style={[22m
[2m      Array [[22m
[2m        Object {[22m
[2m          \\"backgroundColor\\": \\"#ffffff\\",[22m
[2m          \\"borderColor\\": \\"#bbb\\",[22m
[2m          \\"borderTopWidth\\": 1,[22m
[2m          \\"marginTop\\": 20,[22m
[2m        },[22m
[2m        undefined,[22m
[2m      ][22m
[2m    }[22m
[32m-   subtitleContainerStyle={undefined}[39m
[32m-   subtitleStyle={undefined}[39m
[32m-   textInputContainerStyle={undefined}[39m
[32m-   textInputStyle={undefined}[39m
[32m-   titleContainerStyle={undefined}[39m
[32m-   titleStyle={undefined}[39m
[32m-   wrapperStyle={undefined}[39m
[2m  />[22m"
`;

exports[`List with no theme applied OldList renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#bbb",
        "borderTopWidth": 1,
        "marginTop": 20,
      },
      undefined,
    ]
  }
/>
`;
